remove instances of the deprecated URL constructor